# agentic-secretary

./: .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml  skills-lock.json
.agents/skills/langsmith-dataset/: SKILL.md
.github/workflows/: ci.yml
docs/intent/: ai-secretary.md
docs/product/: ai-secretary-prd.md
docs/spec/: ai-secretary.md
evals/: agent_examples.py
scripts/: _google_account_safety.py  draw_graph.py  nuke_seed_data.py  render_policies_pdf.py  seed_demo_data.py
seed_data/: calendar_events.yaml  emails.yaml  policies.md  relations.yaml
src/agentic_secretary/: auth.py  chat.py  cli.py  config.py  detection.py  graph.py  resolution.py  review.py  seed_data.py  state.py  tools.py
tasks/: plan.md  todo.md
tests/: test_actions.py  test_agent_examples.py  test_agent_examples_eval.py  test_auth.py  test_chat.py  test_cli.py  test_config.py  test_conflicts.py  test_detection.py  test_google_account_safety.py  test_graph.py  test_nuke_seed_data.py  test_resolution.py  test_review.py  test_seed_data.py  test_seed_demo_data.py  test_state.py  test_tools.py
