[project]
name = "agentic-secretary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-anthropic",
    "langgraph",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "langsmith",
    "python-dotenv",
    "pyyaml",
    "pydantic",
]

[dependency-groups]
dev = [
    "markdown>=3.10.2",
    "pytest",
    "ruff",
    "xhtml2pdf>=0.2.17",
]

[tool.pytest.ini_options]
markers = [
    "llm_eval: hits a real Anthropic API and costs money; excluded from CI by default",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_secretary"]
