[project]
name = "agentic-secretary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-anthropic",
    "langgraph",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "langsmith",
    "python-dotenv",
    "pyyaml",
    "pydantic",
    "langchain-openai>=1.4.0",
    "langchain-chroma>=1.1.0",
    "chromadb>=1.5.9",
    "torch>=2.13.0",
    "flagembedding>=1.4.0",
]

[dependency-groups]
dev = [
    "markdown>=3.10.2",
    "pytest",
    "ruff",
    "xhtml2pdf>=0.2.17",
]

[tool.pytest.ini_options]
markers = [
    "llm_eval: hits a real Anthropic API and costs money; excluded from CI by default",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_secretary"]
